replicasets/tags.js times out and fails occasionally on Windows

XMLWordPrintableJSON

    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Happens because mongobridge is not passing back connection failures and keeps retrying forever if the target server is down. This causes the original call to time-out.

      This happens at shutdown time and only on Windows, when we cannot find the server's shutdown event and backing-off to the old method of connecting and invoking the shutdown command.

      2014-03-20T21:48:04.172+0000 kill_wrapper OpenEvent failed to open event to the process 4236. It has likely died already or server is running an older version. Attempting to shutdown through admin command.
       m31006| 2014-03-20T21:48:04.172+0000 connection accepted from 127.0.0.1:60115 #6 (1 connection now open)
      2014-03-20 17:48:05 EDT	
       m31006| 2014-03-20T21:48:05.173+0000 warning: Failed to connect to 10.9.180.27:31001, reason: errno:10061 No connection could be made because the target machine actively refused it.
      2014-03-20 17:48:06 EDT	
       m31006| 2014-03-20T21:48:06.673+0000 warning: Failed to connect to 10.9.180.27:31001, reason: errno:10061 No connection could be made because the target machine actively refused it.
      2014-03-20 17:48:08 EDT	
       m31006| 2014-03-20T21:48:08.173+0000 warning: Failed to connect to 10.9.180.27:31001, reason: errno:10061 No connection could be made because the target machine actively refused it.
      2014-03-20 17:48:09 EDT	
       m31006| 2014-03-20T21:48:09.673+0000 warning: Failed to connect to 10.9.180.27:31001, reason: errno:10061 No connection could be made because the target machine actively refused it.
      2014-03-20 17:48:11 EDT	
       m31006| 2014-03-20T21:48:11.173+0000 warning: Failed to connect to 10.9.180.27:31001, reason: errno:10061 No connection could be made because the target machine actively refused it.
      2014-03-20 17:48:12 EDT	
       m31006| 2014-03-20T21:48:12.673+0000 warning: Failed to connect to 10.9.180.27:31001, reason: errno:10061 No connection could be made because the target machine actively refused it.
      2014-03-20 17:48:14 EDT	
       m31006| 2014-03-20T21:48:14.173+0000 warning: Failed to connect to 10.9.180.27:31001, reason: errno:10061 No connection could be made because the target machine actively refused it.
      2014-03-20 17:48:15 EDT	
       m31006| 2014-03-20T21:48:15.673+0000 warning: Failed to connect to 10.9.180.27:31001, reason: errno:10061 No connection could be made because the target machine actively refused it.
      

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: