SERVER-13306 mongobridge should not try forever to connect to dead destinations.

The connect timeout is set to 15 seconds of retrying, after which the
connection to the client will be terminated.

Also added some extra logging and diagnostics so it is easier to analyse
test failures in the future.